# senior-project

game-dude/: Cargo.toml
game-dude/button/: Cargo.toml
game-dude/cross/: Cargo.toml  memory.x
game-dude/cross/.cargo/: config.toml
game-dude/cross/app/: Cargo.toml
game-dude/cross/app/src/: main.rs
game-dude/cross/board/: Cargo.toml
game-dude/cross/board/src/: input.rs  lib.rs
game-dude/cross/games/: Cargo.toml
game-dude/cross/games/src/: collisions.rs  common.rs  cube_field.rs  high_scores.rs  images.rs  lib.rs  rng.rs
game-dude/cross/games/src/only_one_level/: environment.rs  levels.rs  mod.rs  only_one_level.rs  player.rs
game-dude/cross/games/src/square_field/: color_schemes.rs  mod.rs  player.rs  square.rs  square_field.rs  zones.rs
game-dude/cross/games/src/ui/: game_over.rs  high_score_entry.rs  mod.rs  play_again.rs  play_menu.rs  score.rs  text.rs  ui.rs
game-dude/cross/lcd/: Cargo.toml
game-dude/cross/lcd/src/: lib.rs
game-dude/cross/self-tests/: Cargo.toml
game-dude/cross/self-tests/tests/: board.rs  gpio-input-floating.rs  lcd.rs  test.rs
game-dude/games/: Cargo.toml
game-dude/games/src/: collisions.rs  common.rs  cube_field.rs  graphics.rs  images.rs  input.rs  lib.rs  rng.rs
game-dude/host-target-tests/: Cargo.toml
game-dude/lcd/: Cargo.toml
game-dude/lcd/src/: lib.rs
game-dude/scripts/: bmp_converter.py  load_assets.ps1  make_array_from_bmp.py
game-dude/stm32l4/: Cargo.toml  README.md  build.rs
game-dude/stm32l4/src/: lib.rs
game-dude/stm32l4/src/stm32l4p5/: adc.rs  adc_common.rs  aes.rs  can1.rs  comp.rs  crc.rs  crs.rs  dac.rs  dbgmcu.rs  dcmi.rs  device.x  dfsdm1.rs  dma1.rs  dma2d.rs  dmamux1.rs  exti.rs  firewall.rs  flash.rs  fmc.rs  fpu_cpacr.rs  gpioa.rs  gpioi.rs  hash.rs  i2c1.rs  iwdg.rs  lptim1.rs  lpuart1.rs  ltdc.rs  mod.rs  nvic_stir.rs  octospi1.rs  octospim.rs  opamp.rs  otg_fs_device.rs  otg_fs_global.rs  otg_fs_host.rs  otg_fs_pwrclk.rs  pwr.rs  rcc.rs  rng.rs  (+18 more)
game-dude/stm32l4/src/stm32l4p5/adc/: awd2cr.rs  awd3cr.rs  calfact.rs  cfgr.rs  cfgr2.rs  cr.rs  difsel.rs  dr.rs  ier.rs  isr.rs  jdr1.rs  jdr2.rs  jdr3.rs  jdr4.rs  jsqr.rs  ofr1.rs  ofr2.rs  ofr3.rs  ofr4.rs  smpr1.rs  smpr2.rs  sqr1.rs  sqr2.rs  sqr3.rs  sqr4.rs  tr1.rs  tr2.rs  tr3.rs
game-dude/stm32l4/src/stm32l4p5/adc_common/: ccr.rs  cdr.rs  csr.rs
game-dude/stm32l4/src/stm32l4p5/aes/: cr.rs  dinr.rs  doutr.rs  ivr0.rs  ivr1.rs  ivr2.rs  ivr3.rs  keyr0.rs  keyr1.rs  keyr2.rs  keyr3.rs  sr.rs
game-dude/stm32l4/src/stm32l4p5/can1/: btr.rs  esr.rs  fa1r.rs  fb.rs  ffa1r.rs  fm1r.rs  fmr.rs  fs1r.rs  ier.rs  mcr.rs  msr.rs  rfr.rs  rx.rs  tsr.rs  tx.rs
game-dude/stm32l4/src/stm32l4p5/comp/: comp1_csr.rs  comp2_csr.rs
game-dude/stm32l4/src/stm32l4p5/crc/: cr.rs  dr.rs  idr.rs  init.rs  pol.rs
game-dude/stm32l4/src/stm32l4p5/crs/: cfgr.rs  cr.rs  icr.rs  isr.rs
game-dude/stm32l4/src/stm32l4p5/dac/: ccr.rs  cr.rs  dhr12l1.rs  dhr12l2.rs  dhr12ld.rs  dhr12r1.rs  dhr12r2.rs  dhr12rd.rs  dhr8r1.rs  dhr8r2.rs  dhr8rd.rs  dor1.rs  dor2.rs  mcr.rs  shhr.rs  shrr.rs  shsr1.rs  shsr2.rs  sr.rs  swtrigr.rs
game-dude/stm32l4/src/stm32l4p5/dbgmcu/: apb1_fzr1.rs  apb1_fzr2.rs  apb2_fzr.rs  cr.rs  idcode.rs
game-dude/stm32l4/src/stm32l4p5/dcmi/: cr.rs  cwsize.rs  cwstrt.rs  dr.rs  escr.rs  esur.rs  icr.rs  ier.rs  mis.rs  ris.rs  sr.rs
game-dude/stm32l4/src/stm32l4p5/dfsdm1/: ch0awscdr.rs  ch0cfgr1.rs  ch0cfgr2.rs  ch0datinr.rs  ch0dlyr.rs  ch0wdatr.rs  ch1awscdr.rs  ch1cfgr1.rs  ch1cfgr2.rs  ch1datinr.rs  ch1dlyr.rs  ch1wdatr.rs  ch2awscdr.rs  ch2cfgr1.rs  ch2cfgr2.rs  ch2datinr.rs  ch2dlyr.rs  ch2wdatr.rs  ch3awscdr.rs  ch3cfgr1.rs  ch3cfgr2.rs  ch3datinr.rs  ch3dlyr.rs  ch3wdatr.rs  ch4awscdr.rs  ch4cfgr1.rs  ch4cfgr2.rs  ch4datinr.rs  ch4dlyr.rs  ch4wdatr.rs  ch5awscdr.rs  ch5cfgr1.rs  ch5cfgr2.rs  ch5datinr.rs  ch5dlyr.rs  ch5wdatr.rs  ch6awscdr.rs  ch6cfgr1.rs  ch6cfgr2.rs  ch6datinr.rs  (+68 more)
game-dude/stm32l4/src/stm32l4p5/dma1/: ccr1.rs  ccr2.rs  ccr3.rs  ccr4.rs  ccr5.rs  ccr6.rs  ccr7.rs  cmar1.rs  cmar2.rs  cmar3.rs  cmar4.rs  cmar5.rs  cmar6.rs  cmar7.rs  cndtr1.rs  cndtr2.rs  cndtr3.rs  cndtr4.rs  cndtr5.rs  cndtr6.rs  cndtr7.rs  cpar1.rs  cpar2.rs  cpar3.rs  ifcr.rs  (+5 more)
game-dude/stm32l4p5-hal/: Cargo.toml  memory.x
game-dude/stm32l4p5-hal/src/: dma2d.rs  flash.rs  gpio.rs  lib.rs  ltdc.rs  prelude.rs  pwr.rs  rcc.rs  time.rs
game-dude/stm32l4p5-hal/src/traits/: flash.rs
game-dude/stm32l4p5-pac/: Cargo.toml  stm32l4p5.svd.patched
game-dude/stm32l4p5-pac/src/: hash.rs  i2c1.rs  lib.rs  ltdc.rs  pwr.rs  sdmmc1.rs  tim15.rs  usart1.rs
game-dude/stm32l4p5-pac/src/adc/: cfgr.rs  cfgr2.rs
game-dude/stm32l4p5-pac/src/aes/: ivr0.rs  ivr1.rs  ivr2.rs  ivr3.rs  keyr0.rs  keyr1.rs  keyr2.rs  keyr3.rs
game-dude/stm32l4p5-pac/src/crc/: cr.rs
game-dude/stm32l4p5-pac/src/dac/: cr.rs  sr.rs
game-dude/stm32l4p5-pac/src/dma2d/: bgor.rs  fgor.rs  oor.rs  opfccr.rs
game-dude/stm32l4p5-pac/src/fmc/: bcr.rs  bcr1.rs  btr.rs  bwtr.rs
game-dude/stm32l4p5-pac/src/i2c1/: fltr.rs
game-dude/stm32l4p5-pac/src/lpuart1/: cr1.rs
game-dude/stm32l4p5-pac/src/ltdc/: awcr.rs  bpcr.rs  cdsr.rs  gcr.rs  icr.rs  ier.rs  isr.rs  layer.rs  srcr.rs  sscr.rs  twcr.rs
game-dude/stm32l4p5-pac/src/pwr/: cr5.rs
game-dude/stm32l4p5-pac/src/rcc/: ahb1enr.rs  ahb1rstr.rs  ahb1smenr.rs  apb1enr1.rs  bdcr.rs  cr.rs  pllcfgr.rs  pllsai2cfgr.rs
game-dude/stm32l4p5-pac/src/sdmmc1/: acktimer.rs  clkcr.rs  cmdr.rs  fifor1.rs  fifor2.rs  fifor3.rs  fifor4.rs  fifor6.rs  fifor7.rs  fifor8.rs  fifor9.rs  icr.rs  idmabase0r.rs  idmabsizer.rs  maskr.rs  resp2r.rs  resp4r.rs  star.rs
game-dude/stm32l4p5-pac/src/sdmmc2/: argr.rs  dcntr.rs  dctrl.rs  dlenr.rs  fifor0.rs  fifor10.rs  fifor11.rs  fifor12.rs  fifor13.rs  fifor14.rs  fifor15.rs  fifor5.rs  idmabase1r.rs  idmactrlr.rs  power.rs  resp1r.rs  resp3r.rs
game-dude/stm32l4p5-pac/src/spi1/: cr1.rs  cr2.rs  sr.rs
game-dude/stm32l4p5-pac/src/tim15/: ccr2.rs
game-dude/stm32l4p5-pac/src/usart1/: brr.rs  cr1.rs  cr2.rs  cr3.rs  icr.rs  isr.rs
game-dude/xtask/: Cargo.toml
game-dude/xtask/src/: main.rs
(+618 files in other folders)
