#this is produces the application firmware Main
[package]
authors = ["Aaron Kawahara"]
version = "0.1.0"
edition = "2018"
name = "app"

[[bin]]
name = "app"
bench = false
doctest = false
test = false

[dependencies]
asm-delay = "0.9.0"
board = { path = "../board" }
cortex-m-rt = "0.6.13"
defmt = "0.2.1"
defmt-rtt = "0.2.0"
embedded-graphics = "0.6.2"
embedded-hal = "0.2.2"
games = { path = "../../games" }
lcd = { path = "../lcd" }
panic-probe = { version = "0.2.0", features = ["print-defmt"] }
stm32l4p5-hal = {path = "../../stm32l4p5-hal" }

[features]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []