#peripheral initialization
[package]
authors = ["Aaron Kawahara"]
version = "0.1.0"
edition = "2018"
name = "board"

[lib]
bench = false
doctest = false
test = false

[dependencies.stm32l4]
path = "../../stm32l4"
features = ["stm32l4p5", "rt"]

[dependencies]
defmt = "0.2.1"
lcd = { path = "../../lcd" }

[features]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []