#peripheral initialization
[package]
authors = ["Aaron Kawahara"]
version = "0.1.0"
edition = "2018"
name = "board"

[lib]
bench = false
doctest = false
test = false

[dependencies]
defmt = "0.2.1"
lcd = { path = "../../lcd" }
stm32l4p5-hal = { path = "../../stm32l4p5-hal" }

[features]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []