[package]
authors = ["Aaron Kawahara"]
version = "0.1.0"
edition = "2018"
name = "board"

[lib]
bench = false
doctest = false
test = false

[dependencies]
debounced-pin = "0.3.0"
defmt = "0.2.1"
embedded-hal = { version = "0.2.4", features = [ "unproven" ] }
lcd = { path = "../../lcd" }
stm32l4p5-hal = { path = "../../stm32l4p5-hal" }

[features]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []