[package]
name = "games"
version = "0.1.0"
authors = ["Aaron Kawahara"]
edition = "2018"

[lib]
bench = false
doctest = false
test = false

[dependencies]
asm-delay = "0.9.0"
board = { path = "../board" }
defmt = "0.2.1"
embedded-graphics = "0.6.2"
embedded-hal = { version = "0.2.4", features = [ "unproven" ] }
lcd = { path = "../../lcd" }
rand = { version = "0.8.3", features = [ "small_rng" ], default-features = false }
stm32l4p5-hal = { path = "../../stm32l4p5-hal" }

[features]
default = ['defmt-trace']
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
