[package]
authors = ["Aaron Kawahara"]
name = "self-tests"
publish = false
edition = "2018"
version = "0.1.0"

[[test]]
name = "lcd"
harness = false

[dev-dependencies]
defmt = "0.2.1"
defmt-rtt = "0.2.0"
defmt-test = "0.2.1"
panic-probe = { version = "0.2.0", features = ["print-defmt"] }
board = { path = "../board" }
lcd = { path = "../../lcd" }
stm32l4p5-hal = { path = "../../stm32l4p5-hal" }

[features]
default = ['defmt-trace']
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[profile.dev]
# highly recommended! it speeds up running the test suite
opt-level = "s"